# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-Moving_Target"
version = "0.1.0"
description = "Moving Target environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.2",
    "langchain-openai",
    # GRPO training stack
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "trl>=1.0.0",
    "peft>=0.12.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Environment server only (local testing)
server = "Moving_Target.server.app:main"
# HuggingFace Space entry: starts server + runs GRPO training loop
train = "app:main"

[tool.setuptools]
include-package-data = true
packages = ["Moving_Target", "Moving_Target.server"]
package-dir = { "Moving_Target" = ".", "Moving_Target.server" = "server" }